[package]
name = "keygen"
version = "0.1.0"
authors = ["Xuming Zeng <xsznix@gmail.com>", "bR3iN <bR3iN@posteo.de>"]
edition = "2018"

[dependencies]
rand = "0.3"
clap = "2.33"
itertools = "0.10"
strum = "0.21"
strum_macros = "0.21"
rayon = "1.5.1"
num-format = "0.4.3"
dyn-fmt = "0.3.0"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"




